--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,12 @@ body {
     width: 600px;
     margin-bottom: 0;
   }
+
+  .score {
+    display: inline-block;
+    padding: 30px;
+
+  }
   
   .game {
     width: 800px;
