--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,7 @@ body {
     margin: 0 15px 30px;
     background: gray;
     border-radius: 50%;
-    cursor: url(../../pic/hammer.png),auto;
+    cursor: url(../../pic/hammer.png),none;
   }
   
   .hole_has-goblin {
